# ACOS

./: .gitignore  DRAFT_ACOS_ARCHITECTURE.md  ORIGINAL_PROJECT.md  README.md  program.md
mcpd/: Cargo.toml
mcpd/acos_guardian/: Cargo.toml
mcpd/acos_guardian/src/: main.rs
mcpd/acos_mux/: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODOS.md  deny.toml  install.ps1  install.sh
mcpd/acos_mux/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
mcpd/acos_mux/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
mcpd/acos_mux/.github/workflows/: auto-label.yml  auto-release.yml  ci.yml  deny.yml  pr-check.yml  release-binaries.yml
mcpd/acos_mux/bins/acos-mux/: Cargo.toml
mcpd/acos_mux/bins/acos-mux/src/: app.rs  cli.rs  command.rs  daemon.rs  error.rs  event_loop.rs  input.rs  ipc_handler.rs  keybindings.rs  logging.rs  main.rs  mouse.rs  operations.rs  redox_compat.rs  render.rs  upgrade.rs
mcpd/acos_mux/bins/acos-mux/tests/: agent_ipc.rs  cli.rs  e2e.rs  integration.rs  session.rs
mcpd/acos_mux/crates/acos-mux-config/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-config/src/: keys.rs  lib.rs  loader.rs  options.rs  theme.rs
mcpd/acos_mux/crates/acos-mux-config/tests/: config_tests.rs  keybinding_integration.rs
mcpd/acos_mux/crates/acos-mux-daemon/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-daemon/src/: client.rs  lib.rs  persistence.rs  recording.rs  server.rs
mcpd/acos_mux/crates/acos-mux-daemon/tests/: agent_e2e.rs  session_lifecycle.rs
mcpd/acos_mux/crates/acos-mux-ipc/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-ipc/src/: acos.rs  codec.rs  lib.rs  mcp_bridge.rs  messages.rs  transport.rs
mcpd/acos_mux/crates/acos-mux-ipc/tests/: codec_proptest.rs  protocol.rs
mcpd/acos_mux/crates/acos-mux-mux/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-mux/src/: domain.rs  layout.rs  layout_template.rs  lib.rs  pane.rs  project.rs  search.rs  session.rs  swap_config.rs  tab.rs  window.rs
mcpd/acos_mux/crates/acos-mux-mux/tests/: floating_panes.rs  integration.rs  mux_conformance.rs  project_detection.rs  swap_layouts.rs
mcpd/acos_mux/crates/acos-mux-pty/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-pty/src/: acos.rs  acos_redox.rs  cmdbuilder.rs  lib.rs  unix.rs  windows.rs
mcpd/acos_mux/crates/acos-mux-pty/tests/: spawn.rs
mcpd/acos_mux/crates/acos-mux-render/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-render/src/: cursor.rs  damage.rs  lib.rs  statusbar.rs  text.rs
mcpd/acos_mux/crates/acos-mux-render/tests/: render_tests.rs
mcpd/acos_mux/crates/acos-mux-term/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-term/src/: color.rs  cursor.rs  grid.rs  hints.rs  input.rs  lib.rs  modes.rs  performer.rs  screen.rs  search.rs  selection.rs  unicode.rs
mcpd/acos_mux/crates/acos-mux-term/tests/: golden_tests.rs  input_conformance.rs  regressions.rs  screen_conformance.rs  screen_input_integration.rs  screen_operations.rs  smart_scrollback.rs  state_conformance.rs  terminal_conformance.rs  unicode_i18n.rs
mcpd/acos_mux/crates/acos-mux-term/tests/common/: mod.rs
mcpd/acos_mux/crates/acos-mux-term/tests/snapshots/: golden_tests__alt_reset.snap  golden_tests__clear_underline.snap  golden_tests__colored_reset.snap  golden_tests__colored_underline.snap  golden_tests__csi_rep.snap  golden_tests__decaln_reset.snap  golden_tests__deccolm_reset.snap  golden_tests__delete_chars_reset.snap  golden_tests__delete_lines.snap  golden_tests__erase_chars_reset.snap  golden_tests__erase_in_line.snap  golden_tests__fish_cc.snap  golden_tests__grid_reset.snap  golden_tests__history.snap  golden_tests__hyperlinks.snap  golden_tests__indexed_256_colors.snap  golden_tests__insert_blank_reset.snap  golden_tests__issue_855.snap  golden_tests__ll.snap  golden_tests__newline_with_cursor_beyond_scroll_region.snap  golden_tests__origin_goto.snap  golden_tests__region_scroll_down.snap  golden_tests__row_reset.snap  golden_tests__saved_cursor.snap  golden_tests__saved_cursor_alt.snap  golden_tests__scroll_in_region_up_preserves_history.snap  golden_tests__scroll_up_reset.snap  golden_tests__selective_erasure.snap  golden_tests__sgr.snap  golden_tests__tab_rendering.snap  golden_tests__tmux_git_log.snap  golden_tests__tmux_htop.snap  golden_tests__underline.snap  golden_tests__vim_24bitcolors_bce.snap  golden_tests__vim_large_window_scroll.snap  golden_tests__vim_simple_edit.snap  golden_tests__vttest_cursor_movement_1.snap  golden_tests__vttest_insert.snap  (+7 more)
mcpd/acos_mux/crates/acos-mux-vt/: Cargo.toml
mcpd/acos_mux/crates/acos-mux-vt/benches/: throughput.rs
mcpd/acos_mux/crates/acos-mux-vt/src/: charsets.rs  csi.rs  dcs.rs  lib.rs  osc.rs  params.rs  parser.rs
mcpd/acos_mux/crates/acos-mux-vt/tests/: parser_conformance.rs  stress.rs
mcpd/acos_mux/doc/: AI_INTEGRATION.md  CONFIGURATION.md  GETTING_STARTED.md  IPC_PROTOCOL.md  KEYBINDINGS.md  LAYOUT_TEMPLATES.md  RECORDING.md  SHELL_INTEGRATION.md  WINDOWS.md  demo.tape
mcpd/acos_mux/doc/homebrew/: emux.rb
mcpd/acos_mux/fuzz/: Cargo.toml
mcpd/acos_mux/fuzz/corpus/fuzz_parser/: seed-all-c1-controls  seed-csi-many-params  seed-dcs-large  seed-mixed-sequences  seed-nested-escapes  seed-osc-long  seed-rapid-transitions  seed-utf8-overlong  seed-utf8-truncated
mcpd/acos_mux/fuzz/fuzz_targets/: fuzz_parser.rs  fuzz_terminal.rs
mcpd/acos_mux/scripts/: full-test.sh  pre-commit
mcpd/llm_engine/: Cargo.toml
mcpd/llm_engine/src/: generate.rs  lib.rs  model.rs  tokenizer.rs
mcpd/mcp_query/: Cargo.toml
mcpd/mcp_query/src/: main.rs
mcpd/mcp_scheme/: Cargo.toml
mcpd/mcp_scheme/src/: ai_handler.rs  ai_konsole_bridge.rs  boot_konsoles.rs  command_handler.rs  display_handler.rs  file_handlers.rs  guardian_handler.rs  handler.rs  input_router.rs  konsole_handler.rs  konsole_renderer.rs  lib.rs  llm_handler.rs  mock.rs  net_handler.rs  protocol.rs  router.rs  scheme_bridge.rs  support_handlers.rs  system_handlers.rs  talk_handler.rs
mcpd/mcp_talk/: Cargo.toml
mcpd/mcp_talk/src/: main.rs
mcpd/src/: main.rs
(+100 files in other folders)
