[package]
name = "mcpd"
version = "0.1.0"
edition = "2021"
description = "MCP daemon for ACOS — registers and serves the mcp: scheme on Redox OS"

[features]
default = []
# Redox features are only enabled during cross-compilation inside the Podman build.
redox = ["mcp-scheme/redox"]

[dependencies]
mcp-scheme = { path = "mcp_scheme", default-features = false }
serde_json = "1"
libc = "0.2"

# Redox-only dependencies — resolved only when targeting Redox (cross-compile env)
[target.'cfg(target_os = "redox")'.dependencies]
redox-scheme = "0.11"
daemon = { path = "../../../core/base/source/daemon" }
libredox = "0.1"
