[package]
name = "acos-mux-config"
description = "Configuration system (TOML, themes, keybindings) for emux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
