[package]
name = "acos-mux-term"
description = "Terminal state engine (grid, cursor, scrollback, SGR) for emux"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
acos-mux-vt = { workspace = true, features = ["serde"] }
regex = "1"
serde.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
