[package]
name = "acos-mux-vt"
description = "VT escape sequence parser for emux terminal multiplexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []

[dev-dependencies]
insta.workspace = true
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false
